modules/ext.securepoll.special.less
@import 'mediawiki.skin.variables.less';

.securepoll-old-vote {
	color: #a2a9b1;
	font-style: italic;
}

.securepoll-struck-vote td {
	text-decoration: line-through;
}

.securepoll-popup .mw-spinner {
	display: none;
}

.securepoll-detail-header {
	font-weight: bold;
	width: 20%;
}

.securepoll-trans-table {
	width: 100%;
}

.securepoll-trans-table tr {
	vertical-align: top;
}

.securepoll-trans-table .trans-id {
	width: 10%;
}

.securepoll-trans-table .trans-origin {
	width: 45%;
}

.securepoll-trans-table .trans-lang {
	width: 45%;
}

.securepoll-option-preferential {
	margin-bottom: 0.5em;
}

.securepoll-table {
	margin: 1em 1em 1em 0;
	background: #f9f9f9;
	border: thin #a2a9b1 solid;
	border-collapse: collapse;
}

.securepoll-table th,
.securepoll-table td {
	border: thin #a2a9b1 solid;
	padding: 0.4em;
}

.securepoll-table th {
	background: #f2f2f2;
	text-align: center;
}

.securepoll-table caption {
	font-weight: bold;
}

.securepoll-ballot-table {
	border-collapse: collapse;
	border-bottom: thin @border-color-base solid;
}

.securepoll-ballot-table td.securepoll-ballot-optlabel { /* High specificity */
	text-align: left;
	border: 0;
	border-bottom: thin @border-color-inverted solid;
}

.securepoll-ballot-table th {
	font-weight: bold;
	text-align: center;
	border: thin @border-color-base solid;
	padding: 0 1.5em;
}

.securepoll-ballot-table td {
	border-left: thin @border-color-base solid;
	border-right: thin @border-color-base solid;
	border-bottom: thin @border-color-base dotted;
	padding: 0 1.5em;
}

.securepoll-ballot-table td + td {
	/* Center the radio buttons, but not the text in the first column */
	text-align: center;
}

.securepoll-ballot-row:hover {
	background: @background-color-progressive-subtle--hover;
}

.securepoll-error-location {
	margin: 1px 1em 1px 1px;
	border: 2px transparent solid;
	padding: 1px;
}

.securepoll-election-closed {
	color: #a2a9b1;
}

.securepoll-results th {
	padding-right: 5px;
	text-align: left;
}

.securepoll-radiorange-messages .oo-ui-textInputWidget .oo-ui-inputWidget-input {
	width: 7em;
}

.securepoll-option-preferential > .oo-ui-numberInputWidget {
	width: 4em;
}

.securepoll-option-preferential .securepoll-error-location {
	vertical-align: sub;
	padding-right: 5px;
}

/* Match ol margin to ul margin */
.election-summary-elected-list,
.round-summary-tally-list {
	margin: 0.3em 0 0 1.6em;
}

.round-summary-candidate-name {
	display: inline;
	font-weight: normal;
}

.round-candidate-elected .round-summary-candidate-name,
.previously-elected .round-summary-candidate-name {
	font-weight: bold;
}

.previously-elected {
	color: #72777d;
}

#sp-translation-selection {
	margin-top: 16px;
}

h2.securepoll-vote-result-heading {
	padding-bottom: 2em;
}

.securepoll-vote-result-question-cnt {
	background-color: @background-color-neutral;
	padding: 1em;
	margin: 2em 0;
}

p.securepoll-vote-result-question {
	font-weight: bold;
	padding-bottom: 1em;
}

.securepoll-vote-result-option li {
	margin-bottom: 0.5em;
}

.securepoll-vote-result-comment {
	background-color: @background-color-neutral;
	padding: 1em;
}

ul.securepoll-vote-result-options li:first-child:nth-last-child( 1 ) {
	list-style-type: none;
	list-style-image: none;
}

ul.securepoll-vote-result-no-vote {
	margin-left: 0;
	margin-top: 0.6em;
}

.highlight-warnings-button {
	float: right;
	margin-top: -25px;
}

.client-js .securepoll-option-stv-dropdown {
	display: none;
}

.client-nojs .securepoll-option-stv-combobox {
	display: none;
}

/** Add styling for STV-Election Form */
.securepoll-question-layout {
	position: relative;
	margin: 7px;
	max-width: 80em;
	width: fit-content;
}

.securepoll-question-layout .oo-ui-draggableGroupElement > .oo-ui-tagItemWidget {
	display: flex;
	align-items: center;
	border-radius: 7px;
	height: unset;
	min-width: 150px;
	min-height: 32px;
	max-width: fit-content;
	padding: 1px;
	margin: 4px;
}

.securepoll-question-layout .stv-ranking-panel-container {
	display: flex;
	gap: 16px;
}

.securepoll-question-layout .securepoll-question-stv-panel {
	position: relative;
	min-width: 400px;
	flex: 1;
}

.securepoll-question-layout .stv-panel-header {
	position: absolute;
	top: -3em;
	width: calc( 100% - 32px );
	text-align: center;
}

.stv-ranking-draggable-group {
	min-height: 140px;
}

.securepoll-question-layout .item-position-index-label {
	height: 21px;
	min-width: 22px;
	text-align: center;
	vertical-align: text-bottom;

	/** border */
	border-radius: 100% 100%;
	border-width: 1px;
	border-style: solid;
	margin: 1px;
	margin-left: 5px;
	margin-right: 5px;
}

.securepoll-question-layout .item-name-label {
	margin: 0 10px;
	text-align: left;
	text-wrap: auto;
	vertical-align: text-bottom;
	overflow-wrap: anywhere;
}

/* .oo-ui-tagItemWidget is selected for more specificity to override OOUI. */
.securepoll-question-layout .oo-ui-tagItemWidget > .item-delete-buton {
	/* Vertically and horizontally center the button */
	padding-top: 5px;
	margin-right: 3px;
	float: right;
}

.securepoll-question-layout .item-draggable-icon {
	padding-top: 2px;
	margin-left: 3px;
	vertical-align: text-bottom;
	position: sticky;
}

/** Limits layout */
.securepoll-question-layout > .limits-layout {
	position: absolute;
	top: 16px;
	right: 12px;
}

.securepoll-question-layout > .limits-layout > .limit-label {
	margin-top: 2px;
}

.securepoll-import-label-spacing {
	margin-top: 1em;
}

.securepoll-narrow-number-input {
	width: 10em;
}

.securepoll-medium-number-input {
	max-width: 21em;
}

